# pymongo-sample

./: README.md
pymongo-sample/: app.py  pyproject.toml
pymongo-sample/pymongo_sample/: sample.py
