[tool.poetry]
name = "pymongo-sample"
version = "0.1.0"
description = ""
authors = ["Manuel Gozzi <gozzigg@gmail.com>"]
readme = "README.md"
packages = [{include = "pymongo_sample"}]

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
